Create suggested gif section

--- a/index.html
+++ b/index.html
@@ -56,102 +56,16 @@
         </div>
     </section>
     <!-- Suggested Guifos 1 -->
-    <section class='suggested-guifos-container'>
-        <div class='title-list-gif'>Hoy te sugerimos:</div>
-        <div class='list-gifs'>
-            <div class='gif-container bordered'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
+    <section class="suggested-guifos-container">
+        <div class="title-list-gif">Hoy te sugerimos:</div>
+        <div class="list-gifs" id="list-suggested-gifs">
+            <!-- <div class="gif-container bordered">
+                <span class='hashtag-gif-name' id="gif-name">#Jonathanvanness</span>
                 <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/gify.png'>
+                    <img class='gif-image'id="gif-image" src="">
                     <button class='btn-see-more'>Ver más…</button>
                 </div>
-            </div>
-            <div class='gif-container bordered'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
-                <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/gify.png'>
-                    <button class='btn-see-more'>Ver más…</button>
-                </div>
-            </div>
-            <div class='gif-container bordered'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
-                <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/gify.png'>
-                    <button class='btn-see-more'>Ver más…</button>
-                </div>
-            </div>
-            <div class='gif-container bordered'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
-                <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/gify.png'>
-                    <button class='btn-see-more'>Ver más…</button>
-                </div>
-            </div>
-            <div class='gif-container bordered'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
-                <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/gify.png'>
-                    <button class='btn-see-more'>Ver más…</button>
-                </div>
-            </div>
-        </div>
-        <div class='title-list-gif'>Tendencias:</div>
-        <div class='list-gifs'>
-            <div class='gif-container bordered'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
-                <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/sonic.png'>
-                    <button class='btn-see-more'>Ver más…</button>
-                </div>
-            </div>
-            <div class='gif-container'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
-                <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/sonic.png'>
-                    <button class='btn-see-more'>Ver más…</button>
-                </div>
-            </div>
-            <div class='gif-container'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
-                <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/sonic.png'>
-                    <button class='btn-see-more'>Ver más…</button>
-                </div>
-            </div>
-            <div class='gif-container'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
-                <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/sonic.png'>
-                    <button class='btn-see-more'>Ver más…</button>
-                </div>
-            </div>
-            <div class='gif-container'>
-                <div class='hashtag-gif-name'>#Jonathanvanness
-                    <img class='btn-close' src='./assets/icons/button3.svg'>
-                </div>
-                <div class='gif-image-container'>
-                    <img class='gif-image' src='./assets/images/sonic.png'>
-                    <button class='btn-see-more'>Ver más…</button>
-                </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <script type="text/javascript" src="javascript.js"></script>
