--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
-
     <title>gifOS</title>
 </head>
 
@@ -23,7 +22,9 @@
                 <img src='./assets/images/gifOF_logo.png' alt='gifOS logo'>
             </div>
             <div class='navigation-bar'>
-                <button class='btn'>Crear GuifOS</button>
+                <button class='btn'
+                    id="createGif"
+                    onclick="parent.location='myguifos.html'">Crear GuifOS</button>
                 <nav class='menu-select-theme' onclick="toggleDropdown()">
                     <button class='btn choose-theme'>Elegir tema</button>
                     <button class='btn dropdown'>
@@ -53,8 +54,10 @@
             <div class='search-bar-container'>
                 <input class='search-bar' id='search-bar'
                     placeholder="Buscar gifs, hashtags. temas, buscas lo que quiers...">
-                <button class="btn search" onclick="searchGif()">
+                <button class="btn search" 
+                    onclick="searchGif()">
                     <img class='magnifying-glass-icon' src='./assets/icons/lupa.svg'>
+                    
                     <span>Buscar</span>
                 </button>
             </div>
