--- a/myguifos.html
+++ b/myguifos.html
@@ -22,32 +22,40 @@
         <img class="logo" src='./assets/images/gifOF_logo.png' alt='gifOS logo'>
         </div>
     </div>
-    <div class="crateGif-modal" id="createGifModal">
-        <div class="first-step-title">
-            Crear guifos
+    <!--Create guifos section-->
+    <div class="my-guifos-modal" id="idMyGifosModal">
+        <div class="title-modal">
+            <span id="idMyGifosModalTitle">Crear guifos</span>
         </div>
-        <div class="createGif-subtitle">
-            <img src="./assets/images/window img.png">
-            <span class="subtitle">Aquí podrás crear tus propios guifos</span>
+         <div class="info-modal-container" id="idContentMyGifosModal">
+            <div class="subtitle-create-gif">
+                <img src="./assets/images/window img.png">
+                <span class="subtitle">Aquí podrás crear tus propios guifos</span>
+            </div>
+            <p class="content create-gif">
+                <span class="text-description">Crear tu guifo es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:</span>
+                <span class="text-description">1) Dar permisos de acceso a la cámara (sólo por el tiempo de uso)</span class="text-description">
+                <span class="text-description">2) Capturar tu momento guifo</span class="text-description">
+                <span class="text-description">3) Revisar el momento</span>
+                <span class="text-description">4) Listo para subir y compartir!</span class="text-description">
+                <span class="text-description">¿Quieres comenzar a crear tu guifo ahora?</span class="text-description">
+            </p>
         </div>
-        <p class="createGif-description">
-            <span class="text-description">Crear tu guifo es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:</span>
-            <span class="text-description">1) Dar permisos de acceso a la cámara (sólo por el tiempo de uso)</span class="text-description">
-            <span class="text-description">2) Capturar tu momento guifo</span class="text-description">
-            <span class="text-description">3) Revisar el momento</span>
-            <span class="text-description">4) Listo para subir y compartir!</span class="text-description">
-            <span class="text-description">¿Quieres comenzar a crear tu guifo ahora?</span class="text-description">
-        </p>
-        <div class="navigation-buttons createGif">
-            <button class='btn choose-theme'>Cancelar</button>
+        <div class="footer navigation-buttons" id="idFooter">
             <button class='btn choose-theme'
+                onclick="parent.location='index.html'"
+            >Cancelar</button>
+            <button class='btn choose-theme'
+                id='startButton'
                 onclick="createGif()"
             >Comenzar</button>
         </div>
     </div>
 
-    <div class="title misGuifos">Mis guifos</div>
+    <!-- <div class="title misGuifos">Mis guifos</div> -->
 </section>
 <script type="text/javascript" src="javascript.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js" type="text/javascript"></script>
+<script src="https://www.webrtc-experiment.com/gif-recorder.js"></script>
 </body>
 </html>
