--- a/myguifos.html
+++ b/myguifos.html
@@ -54,7 +54,7 @@
 
     <!-- <div class="title misGuifos">Mis guifos</div> -->
 </section>
-<script type="text/javascript" src="javascript.js"></script>
+<script type="text/javascript" src="myguifos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js" type="text/javascript"></script>
 <script src="https://www.webrtc-experiment.com/gif-recorder.js"></script>
 </body>
