Modify mis guifos section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class='navigation-bar'>
                 <button class='btn'
                     id="createGif"
-                    onclick="parent.location='myguifos.html'">Crear GuifOS</button>
+                    onclick="parent.location='createguifo.html'">Crear GuifOS</button>
                 <nav class='menu-select-theme' onclick="toggleDropdown()">
                     <button class='btn choose-theme'>Elegir tema</button>
                     <button class='btn dropdown'>
@@ -41,7 +41,8 @@
                         >Sailor Night</button>
                     </div>
                 </nav>
-                <buttton class='btn text-misGuifos'>
+                <buttton class='btn text-misGuifos'
+                    onclick="parent.location='misguifos.html'">
                     <span class='text-underlined'>M</span>
                     is Guifos
                 </buttton>
