Modify createguifo style section

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
     <!-- trending Guifos 1 -->
     <section class="trend-guifos-container" id="trendGifSection">
         <div class="title list-gif">Tendencias:</div>
-        <div class="list-gifs" id="list-trend-gifs">
+        <div class="list-gifs" id="list-trend-gifs"></div>
     </section>
     <!--search results Guifos -->
-    <section class="search-guifos-container" id="searchGifSection">
+    <section class="search-guifos-container not-show" id="searchGifSection">
         <div class="title list-gif">Resultados de búsqueda:</div>
-        <div class="list-gifs" id="list-search-gifs">
+        <div class="list-gifs" id="list-search-gifs"></div>
     </section>
     <script type="text/javascript" src="javascript.js"></script>
 </body>
