--- a/misguifos.html
+++ b/misguifos.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </header>
-    <!-- Suggested Guifos 1 -->
+    <!-- mis Guifos 1 -->
     <section class="mis-guifos-container" id="idMisGuifosSection">
         <div class="title list-gif">Mis guifos:</div>
         <div class="list-gifs" id="list-mis-gifos"></div>
