--- a/createguifo.html
+++ b/createguifo.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/createguifo.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -23,29 +24,29 @@
         </div>
     </div>
     <!--Create guifos section-->
-    <div class="my-guifos-modal" id="idMyGifosModal">
+    <div class="modal-wrapper" id="idCreateGuifoModalWrapper">
         <div class="title-modal">
-            <span id="idMyGifosModalTitle">Crear guifos</span>
+            <span id="idCreateGuifoModalTitle">Crear guifos</span>
         </div>
-         <div class="info-modal-container" id="idContentMyGifosModal">
+         <div class="content" id="idCreateGuifoContentWrapperModal">
             <div class="subtitle-create-gif">
                 <img src="./assets/images/window img.png">
-                <span class="subtitle">Aquí podrás crear tus propios guifos</span>
+                <span class="subtitle-description">Aquí podrás crear tus propios guifos</span>
             </div>
             <p class="content create-gif">
-                <span class="text-description">Crear tu guifo es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:</span>
-                <span class="text-description">1) Dar permisos de acceso a la cámara (sólo por el tiempo de uso)</span class="text-description">
-                <span class="text-description">2) Capturar tu momento guifo</span class="text-description">
-                <span class="text-description">3) Revisar el momento</span>
-                <span class="text-description">4) Listo para subir y compartir!</span class="text-description">
-                <span class="text-description">¿Quieres comenzar a crear tu guifo ahora?</span class="text-description">
+                <span class="text-description">Crear tu <span class="text-bold cursive">guifo</span> es muy fácil, graba cualquier imagen con tu cámara y obtén guifos personalizados. Los pasos para crear tu guifo son:</span>
+                <span class="text-description"><span class="text-bold">1)</span> Dar permisos de acceso a la cámara (sólo por el tiempo de uso)</span class="text-description">
+                <span class="text-description"><span class="text-bold">2)</span> Capturar tu momento guifo</span class="text-description">
+                <span class="text-description"><span class="text-bold">3)</span> Revisar el momento</span>
+                <span class="text-description"><span class="text-bold">4)</span> Listo para subir y compartir!</span class="text-description">
+                <span class="text-description">¿Quieres comenzar a crear tu <span class="text-bold cursive">guifo</span> ahora?</span class="text-description">
             </p>
         </div>
-        <div class="footer navigation-buttons" id="idFooter">
-            <button class='btn choose-theme'
+        <div class="footer navigation-buttons" id="idCreateGuifoFooterModal">
+            <button class='btn one'
                 onclick="parent.location='index.html'"
             >Cancelar</button>
-            <button class='btn choose-theme'
+            <button class='btn two'
                 id='startButton'
                 onclick="createGif()"
             >Comenzar</button>
@@ -54,7 +55,7 @@
 
     <!-- <div class="title misGuifos">Mis guifos</div> -->
 </section>
-<script type="text/javascript" src="myguifos.js"></script>
+<script type="text/javascript" src="createguifo.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js" type="text/javascript"></script>
 <script src="https://www.webrtc-experiment.com/gif-recorder.js"></script>
 </body>
