Modify upload guifo modal

--- a/createguifo.html
+++ b/createguifo.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <!--Create guifos section-->
-    <div class="modal-wrapper" id="idCreateGuifoModalWrapper">
+    <div class="modal-wrapper medium-wrapper" id="idCreateGuifoModalWrapper">
         <div class="title-modal">
             <span id="idCreateGuifoModalTitle">Crear guifos</span>
         </div>
