--- a/createguifo.html
+++ b/createguifo.html
@@ -13,7 +13,6 @@
         <span class='top-header-text'>¡Bienvenidos/as a Guifos.com! ——————Donde los gifs están.
             ////// Número de visitas: 12.765.803</span>
     </div>
-    <div class='menu-navigation-bar'> 
         <div class='logo-container myGifos'>
             <button class="btn-back"
                 onclick="parent.location='index.html'"
@@ -22,7 +21,6 @@
             </button class="btn-back">
         <img class="logo" src='./assets/images/gifOF_logo.png' alt='gifOS logo'>
         </div>
-    </div>
     <!--Create guifos section-->
     <div class="modal-wrapper medium-wrapper" id="idCreateGuifoModalWrapper">
         <div class="title-modal">
@@ -54,6 +52,11 @@
     </div>
 
     <!-- <div class="title misGuifos">Mis guifos</div> -->
+
+    <section class="mis-guifos-container" id="idMisGuifosSection">
+        <div class="title list-gif">Mis guifos:</div>
+        <div class="list-gifs" id="list-mis-gifos"></div>
+    </section>
 </section>
 <script type="text/javascript" src="createguifo.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js" type="text/javascript"></script>
